<resources>
    <string name="app_name">友人帐</string>
    <string name="call_log">通话记录</string>
    <string name="contact">联系人</string>
    <string name="sms">短消息</string>
    <string name="dial">拨号</string>
    <string name="name_hint">姓名</string>
    <string name="company_hint">公司</string>
    <string name="job_hint">职位</string>
    <string name="phone">电话</string>
    <string name="phone_type_mobile">手机</string>
    <string name="phone_type_work">单位</string>
    <string name="phone_type_work_mobile">单位手机</string>
    <string name="phone_type_home">住宅</string>
    <string name="phone_type_fax_home">住宅传真</string>
    <string name="phone_type_fax_work">单位传真</string>
    <string name="email_type_work">工作</string>
    <string name="email_type_own">个人</string>
    <string name="email">邮箱</string>
    <string name="ring">铃声</string>
    <string name="default_ring">默认铃声</string>
    <string name="address">地址</string>
    <string name="address_home">住宅</string>
    <string name="address_work">单位</string>
    <string name="other">其他</string>
    <string name="birthday">生日</string>
    <string name="event">事件</string>
    <string name="date">日期</string>
    <string name="anniversary">周年纪念日</string>
    <string name="website">网站</string>
    <string name="button_add_more">添加更多项</string>
    <string name="dialog_set_avatar">设置头像</string>
    <string name="capture">拍照</string>
    <string name="pick">从相册中选择照片</string>
    <string name="emo">表情</string>
    <string name="dialog_cancel_edit">取消编辑</string>
    <string name="dialog_delete_contact">删除联系人</string>
    <string name="dialog_delete_contact_confirm">确定要删除此联系人吗？</string>
    <string name="confirm_dialog_content">要舍弃您所做的更改吗？</string>
    <string name="edit">编辑</string>
    <string name="edit_before_call">呼叫前编辑</string>
    <string name="collection">收藏</string>
    <string name="delete">删除</string>
    <string name="delete_contact">删除联系人</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="delete_call_log">删除通话记录</string>
    <string name="batch_delete">批量删除</string>
    <string name="cancel">取消</string>
    <string name="check">查看</string>
    <string name="check_contact">查看联系人</string>
    <string name="ok">确定</string>
    <string name="to">收信人</string>
    <string name="select_sms">请选择短信</string>
    <string name="done_all">全选</string>
    <string name="cancel_done_all">取消全选</string>
    <string name="send_message">发送短信</string>
    <string name="copy_number">复制号码</string>
    <string name="number">号码</string>
    <string name="copy">复制到剪贴板</string>
    <string name="call">拨打</string>
    <string name="sim1_call">卡1拨打</string>
    <string name="sim2_call">卡2拨打</string>
    <string name="visit">访问</string>
    <string name="insert_contact">新建联系人</string>
    <string name="edit_contact">编辑联系人</string>
    <string name="can_not_save_empty_contact">无法保存空联系人</string>
    <string name="contact_detail">联系人详情</string>
    <string name="number_has_been_copied_to_the_clipboard">号码已复制到剪贴板</string>
    <string name="press_again_to_exit">再按一次将退出友人帐</string>
    <string name="search_name_or_content">搜索姓名或内容</string>
    <drawable name="color_normal">@color/colorNormal</drawable>
    <drawable name="color_pressed">@color/colorPressed</drawable>
    <drawable name="color_text_normal">@android:color/white</drawable>
    <drawable name="color_text_pressed">@android:color/darker_gray</drawable>
</resources>
