<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="20dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/emo_picture_layout_emo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/emo"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/emo_picture_layout_pick"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/pick"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/emo_picture_layout_capture"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/capture"
        android:textSize="16sp" />

</LinearLayout>