<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorNormal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/address"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_address_type_home"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/address_home"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_address_type_work"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/address_work"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_address_type_other"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/other"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

</LinearLayout>