<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorNormal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_call_log_click_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_call_log_click_send_message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/send_message"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_call_log_click_edit_before_call"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/edit_before_call"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_call_log_click_copy_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/copy_number"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_call_log_click_black_list"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add_to_blacklist"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_call_log_click_delete_call_log"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/delete_call_log"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_call_log_click_batch_delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/batch_delete"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

</LinearLayout>