<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorNormal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/dialog_delete_contact"
        android:textSize="16sp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/dialog_delete_contact_confirm_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="15sp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        android:text="@string/dialog_delete_contact_confirm"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_delete_contact_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:textSize="14sp"
            android:layout_weight="1"
            android:background="@drawable/selector_press"
            android:gravity="center" />

        <TextView
            android:layout_width="0.3dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/dialog_delete_contact_ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/ok"
            android:textSize="14sp"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@drawable/selector_press"
            android:textColor="@android:color/holo_blue_light"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>