<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorNormal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_contact_long_click_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_contact_long_click_check"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/check"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_contact_long_click_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/edit"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#cecece" />

    <TextView
        android:id="@+id/dialog_contact_long_click_delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/delete"
        android:textSize="14sp"
        android:textColor="#333333"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_press"
        android:gravity="center_vertical" />

</LinearLayout>