<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorNormal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dialog_sms_close"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_close"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:layout_gravity="top|end" />

    <LinearLayout
        android:id="@+id/dialog_sms_call_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#cecece" />

        <TextView
            android:id="@+id/dialog_sms_call"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="#333333"
            android:background="@drawable/selector_press"
            android:text="@string/call" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_sms_insert_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#cecece" />

        <TextView
            android:id="@+id/dialog_sms_insert"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="#333333"
            android:background="@drawable/selector_press"
            android:text="@string/insert_contact" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_sms_check_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#cecece" />

        <TextView
            android:id="@+id/dialog_sms_check"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="#333333"
            android:background="@drawable/selector_press"
            android:text="@string/check_contact" />
    </LinearLayout>
</LinearLayout>